force-app/main/default/objects/EXUS__EXUSBusinessSettings__c/EXUS__EXUSBusinessSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to specify custom endpoints for business requests.</description>
    <label>Experian US Business - Settings</label>
</CustomObject>