force-app/main/default/objects/EXUS__EXUSBusinessSettings__c/fields/EXUS__NamedCredentialOrEndpointIntelliscorePDF__c.field-meta.xml
<CustomField>
    <fullName>EXUS__NamedCredentialOrEndpointIntelliscorePDF__c</fullName>
    <description>Administrators populate this field with the named credential or endpoint of the Experian Business Intelliscore PDF product. By default it is blank but required if you use Intelliscore.</description>
    <label>Named Cred or Endpoint - IntelliscorePDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>