force-app/main/default/objects/EXUS__EXUSBusinessSettings__c/fields/EXUS__NamedCredentialOrEndpointPPR__c.field-meta.xml
<CustomField>
    <fullName>EXUS__NamedCredentialOrEndpointPPR__c</fullName>
    <description>Administrators populate this field with the named credential or endpoint of the Experian Business Premier Profile (PPR) product. By default it is blank but required if you use PPR.</description>
    <label>Named Cred or Endpoint - PPR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>