force-app/main/default/objects/EXUS__EXUSBusinessSettings__c/fields/EXUS__NamedCredentialOrEndpointPPRPDF__c.field-meta.xml
<CustomField>
    <fullName>EXUS__NamedCredentialOrEndpointPPRPDF__c</fullName>
    <description>Administrators populate this field with the named credential or endpoint of the Experian Business Premier Profile (PPR) PDF product. By default it is blank but required if you use PPR.</description>
    <label>Named Cred Or Endpoint - PPR PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>