force-app/main/default/objects/EXUS__EXUSBusinessSettings__c/fields/EXUS__NamedCredentialOrEndpointSBCSPDF__c.field-meta.xml
<CustomField>
    <fullName>EXUS__NamedCredentialOrEndpointSBCSPDF__c</fullName>
    <description>Administrators populate this field with the named credential or endpoint of the Experian Small Business Credit Share (SBCS) PDF product. By default it is blank but required if you use SBCS.</description>
    <label>Named Cred or Endpoint - SBCS PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>